manifests/deployments/deployment3_falla.yaml
# TEST 3: K8sRequiredLabels - Pod SIN labels requeridos (DEBE FALLAR)
apiVersion: v1
kind: Pod
metadata:
  name: test-missing-labels
  namespace: default
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
