manifests/deployments/deployment7_falla2.yaml
# TEST 7b: K8sSecurityContext - Pod corriendo como root (DEBE FALLAR)
apiVersion: v1
kind: Pod
metadata:
  name: test-running-as-root
  namespace: default
  labels:
    app: myapp
    environment: production
    owner: team-devops
    version: v1.0.0
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx:latest
    securityContext:
      runAsUser: 0
      readOnlyRootFilesystem: true
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
